# hazard-visualisation-tool

./: .gitignore  Makefile  README.md  main.py
data/: lebanon-draft-01.csv  lebanon-draft-01.json
front/: index copy.html  index.html
front/assets/data/: README.md
front/scripts/: main.js
hazard-processing-tool/: Makefile  README.md  pyproject.toml
hazard-processing-tool/src/back_end/: compute_hazard.py  prepare_hazard_mask.py
hazard-processing-tool/src/front_end/: app.py
hazard-processing-tool/src/utils/: raster_aux_tools.py
hazard-visualisation-tool/: .gitignore  app.py  pyproject.toml
hazard-visualisation-tool/notebooks/: poc-data-processing.ipynb
