[tool.poetry]
name = "hazard-visualisation-tool"
version = "0.1.0"
description = "Disaster risk assessment tool"
authors = [
    "Jiri Klic <web@jiriklic.com>"
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
