[tool.poetry]
name = "hazard-visualisation-tool"
version = "0.1.0"
description = "Disaster risk assessment tool"
authors = [
    "Jiri Klic <web@jiriklic.com>"
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
rasterio = "^1.4.1"
libhxl = "^5.2.1"
requests = "^2.32.3"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
folium = "^0.17.0"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
